deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrogulike-postgres
  namespace: gamefikace-matematika
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrogulike-postgres
  template:
    metadata:
      labels:
        app: matrogulike-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: matrogulike-postgres-service
  namespace: gamefikace-matematika
spec:
  selector:
    app: matrogulike-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrogulike-backend
  namespace: gamefikace-matematika
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrogulike-backend
  template:
    metadata:
      labels:
        app: matrogulike-backend
    spec:
      containers:
        - name: backend
          image: petrkonir/matrogulike-backend:v7
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: matrogulike-backend-service
  namespace: gamefikace-matematika
spec:
  selector:
    app: matrogulike-backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
