ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrogulike-ingress
  namespace: gamefikace-matematika
spec:
  rules:
    - host: matrogulike.kvd.zcu.cz
      http:
        paths:
          # Vše začínající na /api pošli do backendu (Ingress cestu NEZKRÁTÍ)
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: matrogulike-backend-service
                port:
                  number: 3001
          # Vše ostatní pošli do frontendu
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matrogulike-frontend-service
                port:
                  number: 80
